--- a/simple.html
+++ b/simple.html
@@ -17,7 +17,7 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Just some content
+			A Very Respectfull Website content
 		</p>
 	</main>
 	<footer class="container">
